--- a/client/src/style/css/Signup.css
+++ b/client/src/style/css/Signup.css
@@ -72,7 +72,7 @@
   display: flex;
   outline: none;
   color: #3e3c39;
-  left: 2%;
+  left: 40%;
   height: 3.5vh;
   width: 70%;
 }
@@ -117,7 +117,7 @@
   letter-spacing: 0.01em;
   background: #ffffff;
   outline: none;
-  left: -45%;
+  left: 0%;
   box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
   border-radius: 30px;
   border: #ffffff;
@@ -143,22 +143,28 @@
   }
 
   .name-lastname-name label {
-    margin-left: 7.8vw;
+    margin-left: 0vw;
   }
 
   .name-lastname-name input {
-    margin-left: 30%;
+    margin-left: 20%;
   }
 
   .name-lastname-lastname input {
-    margin-left: -4vw;
+    margin-left: -2vw;
   }
 
-  .name-lastname-name input,
-  .name-lastname-lastname input {
+  .name-lastname-name input {
     width: 58%;
     height: 6vh;
     margin-left: 30%;
+    padding-left: 1.6vw;
+  }
+
+  .name-lastname-lastname input {
+    width: 58%;
+    height: 6vh;
+    margin-left: -15%;
     padding-left: 1.6vw;
   }
 
