--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -199,12 +199,12 @@ h1 {
 }
 
 .not-dividas-create {
-  font-family: fonteLabel;
+  font-family: fontenormal;
   align-items: center;
   text-align: center;
   letter-spacing: 0.01em;
   font-size: 4.5vw;
-  color: #3e3c39;
+  color: #aeadaa;
   margin-top: 10%;
   /* sombra base */
 
@@ -212,6 +212,12 @@ h1 {
 }
 .slider {
   margin-left: 17%;
+}
+
+.count-slider-Npagas,
+.count-slider-pagas {
+  color: #000000;
+  margin-left: 30vw;
 }
 
 @media (min-width: 961px) {
@@ -238,6 +244,7 @@ h1 {
     height: 100%;
   }
   .pay-button {
+    z-index: 20;
     width: 35%;
     height: 4vh;
     margin-left: 0%;
@@ -375,12 +382,12 @@ h1 {
     color: #3e3c39;
   }
   .not-dividas-create {
-    font-family: fonteLabel;
+    font-family: fontenormal;
     align-items: center;
     text-align: center;
     letter-spacing: 0.01em;
     font-size: 1.8vw;
-    color: #3e3c39;
+    color: #aeadaa;
     margin-top: 0%;
     /* sombra base */
 
