--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -79,7 +79,7 @@ html {
 .textIno,
 .textInt,
 .textTech {
-  margin-top: 6%;
+  margin-top: 3%;
   margin-left: 25%;
   position: relative;
   right: 3%;
@@ -87,7 +87,7 @@ html {
   font-family: fonteTitulo;
   font-style: normal;
   font-weight: 900;
-  font-size: 5.5vw;
+  font-size: 2.5vh;
   line-height: 100%;
   align-items: center;
   letter-spacing: 0.01em;
@@ -112,7 +112,8 @@ html {
 .textoInt {
   color: black;
 }
-@media (min-width: 961px) {
+
+@media (min-width: 600px) {
   .criar-divida-titulo {
     position: relative;
     height: 5vh;
@@ -200,6 +201,6 @@ html {
   }
   .box3 {
     left: 52.5%;
-    top: -70%;
+    top: -65%;
   }
 }
