finish css dividas showComponent

--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -73,8 +73,8 @@ h1 {
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 600;
-  font-size: 5vw;
-  line-height: 110%;
+  font-size: 2.5vh;
+  line-height: 100%;
   display: flex;
 
   letter-spacing: 0.01em;
@@ -85,7 +85,7 @@ h1 {
   justify-content: center;
   text-align: center;
   align-items: center;
-  transform: translate(0, 20%);
+  top: 20%;
 }
 
 #text2 {
@@ -95,7 +95,7 @@ h1 {
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 900;
-  font-size: 3vh;
+  font-size: 2.7vh;
   line-height: 100%;
   align-items: center;
   letter-spacing: 0.01em;
@@ -155,7 +155,7 @@ h1 {
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 600;
-  font-size: 110%;
+  font-size: 100%;
   line-height: 23px;
   letter-spacing: 0.01em;
 
@@ -165,10 +165,11 @@ h1 {
 }
 
 #descricaodiv {
+  white-space: nowrap;
   position: relative;
   height: 15.5vh;
   left: 13%;
-  font-size: 5.5vw;
+  font-size: 2.5vh;
   width: 80%;
 }
 #descricaodiv p {
@@ -217,6 +218,7 @@ h1 {
 .count-slider-pagas {
   color: #000000;
   margin-left: 30vw;
+  margin-top: -8%;
 }
 
 @media (min-width: 961px) {
@@ -280,7 +282,7 @@ h1 {
     font-family: fonteLabel;
     font-style: normal;
     font-weight: 900;
-    font-size: 1.5vw;
+    font-size: 2.7vh;
     line-height: 90%;
     align-items: center;
     letter-spacing: 0.01em;
@@ -290,14 +292,13 @@ h1 {
     position: relative;
     height: 8vh;
     left: 15%;
-    font-size: 2vw;
+    font-size: 2vh;
     width: 100%;
   }
   #descricaodiv p {
     color: #000000;
     font-family: fontenormal;
     font-weight: 400;
-    font-size: 1.4vw;
   }
 
   #titlepresent {
@@ -325,7 +326,9 @@ h1 {
     text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   }
   .count-slider-pagas {
-    margin-left: 46%;
+    margin-left: 43%;
+    margin-top: 13%;
+    font-size: 2.7vh;
   }
   #dividaspresent {
     position: relative;
@@ -354,7 +357,7 @@ h1 {
     font-family: fonteLabel;
     font-style: normal;
     font-weight: 600;
-    font-size: 2.1vw;
+    font-size: 3vh;
     line-height: 100%;
     display: flex;
 
