--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -17,6 +17,7 @@ html {
   height: 100%;
 }
 .criar-divida-tituloDEV {
+  white-space: nowrap;
   position: relative;
   height: 5vh;
   top: 1vh;
@@ -29,6 +30,7 @@ html {
 }
 
 .criar-divida-tituloDSC {
+  white-space: nowrap;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -219,7 +221,7 @@ h1 {
 .count-slider-pagas {
   color: #000000;
   margin-left: 30vw;
-  margin-top: -8%;
+  margin-top: -0%;
 }
 
 @media (min-width: 961px) {
@@ -293,7 +295,7 @@ h1 {
     position: relative;
     height: 8vh;
     left: 15%;
-    font-size: 2vh;
+    font-size: 2.4vh;
     width: 100%;
   }
   #descricaodiv p {
@@ -328,8 +330,9 @@ h1 {
   }
   .count-slider-pagas {
     margin-left: 43%;
-    margin-top: 13%;
-    font-size: 2.7vh;
+    margin-top: 0%;
+    top: 0%;
+    font-size: 2.4vh;
   }
   #dividaspresent {
     position: relative;
@@ -416,5 +419,119 @@ h1 {
 
   .carousel-row {
     cursor: pointer;
+  }
+}
+@media (min-width: 962px) and (max-width: 1600px) {
+  .Ppagar {
+    position: relative;
+    width: 60%;
+    height: 5.5vh;
+    left: 9%;
+    margin-top: 25vh;
+
+    font-family: fonteLabel;
+    font-size: 3.5vw;
+    letter-spacing: 0.01em;
+
+    border-radius: 30px;
+    border: none;
+    outline: none;
+  }
+  #text2 {
+    position: relative;
+    right: 3%;
+    display: inline-block;
+    font-family: fonteLabel;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 2vw;
+    line-height: 100%;
+    align-items: center;
+    letter-spacing: 0.01em;
+  }
+  #text1 {
+    white-space: nowrap;
+    font-family: fonteLabel;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.5vh;
+    line-height: 100%;
+    display: flex;
+
+    letter-spacing: 0.01em;
+
+    position: relative;
+    color: #ffffff;
+
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    top: 29%;
+  }
+  #titlepresent {
+    position: relative;
+    text-align: center;
+    margin: auto;
+    margin-top: 0%;
+    width: 100%;
+    white-space: nowrap;
+    transform: translate(0%, 90%);
+
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+
+    font-family: fonteLabel;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 23px;
+    font-size: 2vw;
+    letter-spacing: 0.01em;
+
+    /* sombra base */
+
+    text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+  }
+  #dividaspresent {
+    position: relative;
+    font-family: fontenormal;
+    width: 80%;
+
+    height: 21vw;
+    margin-top: 3vh;
+    left: 0%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 3.5vh;
+    letter-spacing: 0.01em;
+
+    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 30px;
+    border: none;
+    outline: none;
+
+    color: #ffffff;
+  }
+  #descricaodiv {
+    position: relative;
+    height: 8vh;
+    left: 15%;
+    font-size: 2vw;
+    width: 100%;
+  }
+  #line {
+    position: relative;
+    display: block;
+    border-bottom: 1px solid currentColor;
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    width: 80%;
+
+    margin: auto;
+    margin-top: 12%;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
   }
 }
