--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -45,7 +45,7 @@ html {
   color: #3e3c39;
 }
 
-h1 {
+.criar-divida-tituloDEV h1, .criar-divida-tituloDSC h1 {
   margin-top: 0;
   margin-bottom: 10%;
 }
