--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -114,7 +114,7 @@ html {
 }
 
 @media (min-width: 600px) {
-  .criar-divida-titulo {
+  .dividas-globais-titulo {
     position: relative;
     height: 5vh;
     width: 30%;
