--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -14,15 +14,17 @@ html {
 .Hamburguer {
   position: relative;
   left: 6.5%;
-  top: 20%;
+  top: 53%;
   z-index: 2;
 }
 .AppLogo {
   position: relative;
-  left: 18%;
-  top: 30%;
-  height: 50%;
-  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 13%;
+  height: 40%;
+  width: 100%;
 }
 .normalTopBarCOLOR {
   background-color: #ffffff;
