--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -45,7 +45,8 @@ html {
   color: #3e3c39;
 }
 
-.criar-divida-tituloDEV h1, .criar-divida-tituloDSC h1 {
+.criar-divida-tituloDEV h1,
+.criar-divida-tituloDSC h1 {
   margin-top: 0;
   margin-bottom: 10%;
 }
@@ -98,7 +99,7 @@ html {
   font-style: normal;
   font-weight: 900;
   font-size: 2.7vh;
-  line-height: 100%;
+  line-height: 80%;
   align-items: center;
   letter-spacing: 0.01em;
 }
@@ -136,7 +137,7 @@ html {
   width: 80%;
 
   margin: auto;
-  margin-top: 12%;
+  margin-top: 10%;
   justify-content: center;
   text-align: center;
   align-items: center;
