--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -183,9 +183,10 @@ html {
 }
 
 .div-button {
+  width: 90%;
   height: 50%;
-  margin-left: 22%;
-  margin-top: 10%;
+  margin-left: 34%;
+  margin-top: 15%;
 }
 .carousel-initialized {
   height: 110%;
@@ -247,6 +248,13 @@ html {
     width: 50%;
     left: 10%;
     height: 100%;
+  }
+
+  .div-button {
+    width: 60%;
+    height: 50%;
+    margin-left: 24%;
+    margin-top: 10%;
   }
   .pay-button {
     z-index: 20;
@@ -329,12 +337,19 @@ html {
 
     text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   }
-  .count-slider-pagas {
+  .count-slider-Npagas {
     margin-left: 43%;
-    margin-top: 0%;
+    margin-top: 17%;
     top: 0%;
     font-size: 2.4vh;
   }
+  .count-slider-pagas {
+    margin-left: 43%;
+    margin-top: 17%;
+    top: 0%;
+    font-size: 2.4vh;
+  }
+
   #dividaspresent {
     position: relative;
     font-family: fontenormal;
@@ -534,5 +549,18 @@ html {
     justify-content: center;
     text-align: center;
     align-items: center;
+  }
+
+  .count-slider-Npagas {
+    margin-left: 45%;
+    margin-top: 7%;
+    top: 0%;
+    font-size: 2.4vh;
+  }
+  .count-slider-pagas {
+    margin-left: 43%;
+    margin-top: 8%;
+    top: 0%;
+    font-size: 2.4vh;
   }
 }
