--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -62,6 +62,9 @@
   border-bottom: 1px solid #ffffff;
   box-sizing: border-box;
 }
+.LogoScale {
+  height: 55%;
+}
 
 .App-logo-plus {
   /* Criar Dívida Icone */
@@ -102,13 +105,14 @@
   position: relative;
   width: 70%;
   height: 50%;
-  top: -28%;
+  top: -13%;
+  margin-top: -3%;
   left: 20%;
 
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 600;
-  font-size: 5.7vw;
+  font-size: 3.3vh;
   line-height: 26px;
   display: flex;
   align-items: center;
@@ -299,6 +303,10 @@ a {
 }
 
 @media (min-width: 961px) {
+  .LogoScale {
+    height: 40%;
+  }
+
   #sbbg {
     position: absolute;
     width: 23.15%;
@@ -310,7 +318,8 @@ a {
     width: 60%;
     height: 50%;
     top: -23%;
-    left: 24%;
+    margin-top: 0%;
+    left: 27%;
 
     font-size: 2.5vh;
   }
