--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -1,17 +1,3 @@
-@font-face {
-  font-family: fonteTitulo;
-  src: url(../font/SuisseIntlCond-Medium-WebS.woff);
-}
-
-@font-face {
-  font-family: fonteLabel;
-  src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
-}
-@font-face {
-  font-family: fontenormal;
-  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
-}
-
 html {
   width: 100%;
   height: 100%;
@@ -176,6 +162,7 @@ html {
   font-size: 2.3vh;
   width: 80%;
 }
+
 #descricaodiv p {
   color: #000000;
   font-family: fontenormal;
@@ -201,6 +188,7 @@ html {
   box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .not-dividas-create {
@@ -229,21 +217,15 @@ html {
 
 @media (min-width: 961px) {
   .criar-divida-tituloDSC {
-    position: relative;
-    height: 5vh;
     width: 30%;
     top: 15vh;
-    font-family: fonteTitulo;
-    font-weight: bold;
-    font-size: 2vh;
     left: 48%;
-    text-align: center;
-    letter-spacing: 0.01em;
-    color: #3e3c39;
   }
+
   .normalTopBarCOLOR {
     display: none;
   }
+  
   .square {
     float: left;
     width: 50%;
@@ -253,21 +235,13 @@ html {
 
   .div-button {
     width: 60%;
-    height: 50%;
     margin-left: 24%;
     margin-top: 10%;
   }
+
   .pay-button {
     z-index: 20;
-    width: 35%;
-    height: 4vh;
     margin-left: 0%;
-    background: #f08a6e;
-    /* sombra base */
-    border: none;
-    box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    color: #ffffff;
   }
 
   .slider {
@@ -285,66 +259,31 @@ html {
     height: 100%;
     top: 100%;
   }
+
   #dividasshowid {
     height: 100%;
   }
+
   #text2 {
-    position: relative;
-    right: 3%;
-    display: inline-block;
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 900;
     font-size: 2.7vh;
     line-height: 90%;
-    align-items: center;
-    letter-spacing: 0.01em;
   }
 
   #descricaodiv {
-    position: relative;
     height: 8vh;
     left: 15%;
     font-size: 2.4vh;
     width: 100%;
   }
-  #descricaodiv p {
-    color: #000000;
-    font-family: fontenormal;
-    font-weight: 400;
-  }
 
   #titlepresent {
-    position: relative;
-    text-align: center;
-    margin: auto;
-    margin-top: 1%;
     width: 100%;
-    white-space: nowrap;
     transform: translate(0%, 130%);
 
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 23px;
     font-size: 2.5vh;
-    letter-spacing: 0.01em;
-
-    /* sombra base */
-
-    text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
   }
-  .count-slider-Npagas {
-    margin-left: 43%;
-    margin-top: 17%;
-    top: 0%;
-    font-size: 2.4vh;
-  }
-  .count-slider-pagas {
+
+  .count-slider-Npagas, .count-slider-pagas {
     margin-left: 43%;
     margin-top: 17%;
     top: 0%;
@@ -352,185 +291,79 @@ html {
   }
 
   #dividaspresent {
-    position: relative;
-    font-family: fontenormal;
-    width: 80%;
 
     height: 21vw;
-    margin-top: 3vh;
-    left: 0%;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-
     font-size: 3.5vh;
-    letter-spacing: 0.01em;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: none;
-    outline: none;
-
-    color: #ffffff;
   }
+
   #text1 {
     white-space: nowrap;
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 600;
     font-size: 3vh;
-    line-height: 100%;
-    display: flex;
 
-    letter-spacing: 0.01em;
-
-    position: relative;
-    color: #ffffff;
-
-    justify-content: center;
-    text-align: center;
-    align-items: center;
     top: 23%;
   }
 
   .criar-divida-tituloDEV {
-    position: relative;
-    height: 5vh;
     width: 30%;
     top: 15vh;
-    font-family: fonteTitulo;
-    font-weight: bold;
-    font-size: 2vh;
     left: 48%;
-    text-align: center;
-    letter-spacing: 0.01em;
-    color: #3e3c39;
   }
-  .not-dividas-create {
-    font-family: fontenormal;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.01em;
-    font-size: 1.8vw;
-    color: #aeadaa;
-    margin-top: 0%;
-    /* sombra base */
 
-    text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+  .not-dividas-create {
+    font-size: 1.8vw;
+    margin-top: 0%;
   }
+
   .Ppagar {
-    position: relative;
     width: 40%;
     height: 6vh;
     left: 20%;
     margin-top: 25vh;
-
-    font-family: fonteLabel;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
-
-    border-radius: 30px;
-    border: none;
-    outline: none;
   }
 
   .carousel-row {
     cursor: pointer;
   }
 }
+
 @media (min-width: 962px) and (max-width: 1600px) {
   .Ppagar {
-    position: relative;
     width: 60%;
     height: 6vh;
     left: 9%;
     margin-top: 25vh;
 
-    font-family: fonteLabel;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
-
-    border-radius: 30px;
-    border: none;
-    outline: none;
   }
+
   #text2 {
-    position: relative;
-    right: 3%;
-    display: inline-block;
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 900;
     font-size: 2vw;
     line-height: 100%;
-    align-items: center;
-    letter-spacing: 0.01em;
   }
+
   #text1 {
     white-space: nowrap;
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 600;
     font-size: 2.5vh;
-    line-height: 100%;
-    display: flex;
 
-    letter-spacing: 0.01em;
-
-    position: relative;
-    color: #ffffff;
-
-    justify-content: center;
-    text-align: center;
-    align-items: center;
     top: 29%;
   }
+
   #titlepresent {
-    position: relative;
-    text-align: center;
-    margin: auto;
     margin-top: 0%;
     width: 100%;
     white-space: nowrap;
     transform: translate(0%, 90%);
 
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-
-    font-family: fonteLabel;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 23px;
     font-size: 2vw;
-    letter-spacing: 0.01em;
-
-    /* sombra base */
-
-    text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+    
   }
+
   #dividaspresent {
-    position: relative;
-    font-family: fontenormal;
-    width: 80%;
-
     height: 21vw;
-    margin-top: 3vh;
-    left: 0%;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-
     font-size: 3.5vh;
-    letter-spacing: 0.01em;
 
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: none;
-    outline: none;
-
-    color: #ffffff;
   }
+
   #descricaodiv {
     position: relative;
     height: 8vh;
@@ -538,29 +371,14 @@ html {
     font-size: 2vw;
     width: 100%;
   }
-  #line {
-    position: relative;
-    display: block;
-    border-bottom: 1px solid currentColor;
-    transform: matrix(1, 0, 0, 1, 0, 0);
-    width: 80%;
 
-    margin: auto;
+  #line {
     margin-top: 12%;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
   }
 
-  .count-slider-Npagas {
+  .count-slider-Npagas, .count-slider-pagas {
     margin-left: 45%;
     margin-top: 7%;
-    top: 0%;
-    font-size: 2.4vh;
-  }
-  .count-slider-pagas {
-    margin-left: 43%;
-    margin-top: 8%;
     top: 0%;
     font-size: 2.4vh;
   }
