--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -38,9 +38,10 @@ html {
 }
 
 .dividasshow {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 200%;
+  margin: 0%;
 }
 
 .Ppagar {
@@ -183,6 +184,7 @@ html {
   width: 35%;
   height: 4vh;
   background: #f08a6e;
+  margin-left: -4%;
   /* sombra base */
   border: none;
   box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
@@ -225,7 +227,6 @@ html {
   .normalTopBarCOLOR {
     display: none;
   }
-  
   .square {
     float: left;
     width: 50%;
@@ -241,7 +242,15 @@ html {
 
   .pay-button {
     z-index: 20;
-    margin-left: 0%;
+    width: 35%;
+    height: 4vh;
+    margin-left: -1%;
+    background: #f08a6e;
+    /* sombra base */
+    border: none;
+    box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    color: #ffffff;
   }
 
   .slider {
@@ -261,7 +270,9 @@ html {
   }
 
   #dividasshowid {
+    position: relative;
     height: 100%;
+    width: 100%;
   }
 
   #text2 {
@@ -283,7 +294,8 @@ html {
     font-size: 2.5vh;
   }
 
-  .count-slider-Npagas, .count-slider-pagas {
+  .count-slider-Npagas,
+  .count-slider-pagas {
     margin-left: 43%;
     margin-top: 17%;
     top: 0%;
@@ -291,10 +303,8 @@ html {
   }
 
   #dividaspresent {
-
     height: 21vw;
     font-size: 3.5vh;
-
   }
 
   #text1 {
@@ -333,7 +343,6 @@ html {
     height: 6vh;
     left: 9%;
     margin-top: 25vh;
-
   }
 
   #text2 {
@@ -355,13 +364,11 @@ html {
     transform: translate(0%, 90%);
 
     font-size: 2vw;
-    
   }
 
   #dividaspresent {
     height: 21vw;
     font-size: 3.5vh;
-
   }
 
   #descricaodiv {
@@ -376,7 +383,8 @@ html {
     margin-top: 12%;
   }
 
-  .count-slider-Npagas, .count-slider-pagas {
+  .count-slider-Npagas,
+  .count-slider-pagas {
     margin-left: 45%;
     margin-top: 7%;
     top: 0%;
