--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -2,10 +2,10 @@ html {
   overflow: hidden;
 }
 .dividasshow {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 200%;
-  top: 90%;
+  height: 100%;
+  top: 0%;
 }
 .caixa {
   position: relative;
