--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 #bg {
@@ -9,6 +10,7 @@ html {
   top: 0;
   margin-top: 0;
   width: 100%;
+  height: 100%;
 }
 
 .Hamburguer {
