--- a/client/src/style/css/PopUp.css
+++ b/client/src/style/css/PopUp.css
@@ -6,21 +6,6 @@
   width: 100%;
   height: 100%;
 }
-.popupzito1 {
-  z-index: 1;
-  position: relative;
-  width: 50%;
-  top: 0vh;
-  left: 37%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-  border-radius: 30px;
-}
 
 .popup-criar-divida {
   position: absolute;
@@ -59,39 +44,32 @@
   font-family: fonteLabel;
   font-size: 3.5vh;
   height: 5vh;
-  top: 35%;
+  top: 30%;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   letter-spacing: 0.01em;
-  width: 70%;
+  width: 75%;
+}
+
+.buttontext, .buttontext1 {
+  color: #f08a6e;
+  z-index: 2;
+  position: relative;
+  font-family: fonteLabel;
+  font-size: 3vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
 }
 
 .buttontext {
-  color: #f08a6e;
-  z-index: 2;
-  position: relative;
-  font-family: fonteLabel;
-  font-size: 3vh;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
   top: -10%;
 }
 .buttontext1 {
-  color: #f08a6e;
-  z-index: 2;
-  position: relative;
-  font-family: fonteLabel;
-  font-size: 3vh;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
   top: -5%;
 }
 
@@ -132,66 +110,40 @@
   width: 70%;
   top: 18%;
 }
-.popupzito {
+
+.popupzito, .popupzito1, .popupzito2 {
   z-index: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+}
+.popupzito {
   width: 70%;
   top: 30%;
   left: 15%;
   height: 35%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-  border-radius: 30px;
 }
+
 .popupzito1 {
-  z-index: 1;
-  position: relative;
   width: 80%;
   top: -30vh;
   left: 23%;
   height: 30vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-  border-radius: 30px;
+
 }
 .popupzito2 {
-  z-index: 1;
-  position: relative;
   width: 80%;
   top: -30vh;
   left: 0%;
   height: 30vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-  border-radius: 30px;
+
 }
-.popuptext {
-  color: #f08a6e;
-  z-index: 2;
-  position: relative;
-  font-family: fonteLabel;
-  font-size: 3.5vh;
-  height: 5vh;
-  top: 30%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: 0.01em;
-  width: 75%;
-}
+
 .circle {
   position: relative;
   display: block;
@@ -203,90 +155,40 @@
 
 @media (min-width: 961px) {
   .popupzito {
-    z-index: 1;
-    position: relative;
     width: 40%;
     top: 25%;
     left: 40%;
     height: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #ffffff;
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
   }
   .popupzito1 {
-    z-index: 1;
-    position: relative;
     width: 50%;
     top: 0vw;
     left: 37%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #ffffff;
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
   }
   .popupzito2 {
-    z-index: 1;
-    position: relative;
     width: 50%;
     top: 0vh;
     left: 37%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #ffffff;
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
+
   }
   .popuptext {
     font-size: 4vh;
     height: 4vh;
     top: 28%;
-    width: 75%;
   }
   .circle {
-    position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 30%;
     top: 55%;
   }
-  .circle-div {
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    z-index: 2;
-    height: 100%;
-    left: 0%;
-    top: 0%;
-  }
+
   .popup-divida-paga {
-    position: relative;
-    width: 60%;
     height: 35vh;
     top: -38vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 
   .popup-confirmar {
-    position: relative;
-    height: 35vh;
-    width: 80%;
     left: 12.5%;
-    top: -40vh;
   }
 }
 
