--- a/client/src/style/css/Signup.css
+++ b/client/src/style/css/Signup.css
@@ -93,6 +93,7 @@
   letter-spacing: 0.01em;
   background: #ffffff;
   outline: none;
+  min-height: 29px;
 
   box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
   border-radius: 30px;
@@ -110,6 +111,7 @@
   letter-spacing: 0.01em;
   background: #ffffff;
   outline: none;
+  min-height: 29px;
   left: 0%;
   box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
   border-radius: 30px;
