--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -213,8 +213,13 @@ html {
 .count-slider-pagas {
   color: #000000;
   margin-left: 30vw;
-  margin-top: -0%;
   font-size: 1.5vh;
+  margin-top: -3vh;;
+}
+
+.carrossel-fixed {
+  position: relative;
+  bottom: 10vh;
 }
 
 @media (min-width: 961px) {
@@ -297,8 +302,7 @@ html {
   .count-slider-Npagas,
   .count-slider-pagas {
     margin-left: 43%;
-    margin-top: 17%;
-    top: 0%;
+    margin-top: -0vh;
     font-size: 2.4vh;
   }
 
