--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -15,9 +15,12 @@ html {
 
 .Hamburguer {
   position: relative;
-  left: 6.5%;
+  margin-left: -9vw;
   top: 40%;
   z-index: 2;
+  height: 40%;
+  width: 40%;
+
 }
 .AppLogo {
   position: relative;
