--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -15,19 +15,19 @@ html {
 
 .Hamburguer {
   position: relative;
-  margin-left: -9vw;
+  margin-left: -3vw;
   top: 40%;
   z-index: 2;
-  height: 40%;
-  width: 40%;
-
+  height: 30%;
+  width: 30%;
 }
 .AppLogo {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 0%;
+  top: 5%;
+  left: 5%;
   height: 40%;
   width: 100%;
 }
