--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -215,9 +215,9 @@ body {
   /* Seta Baixo */
 
   position: relative;
-  width: 3.5%;
-  left: 85%;
-  top: -15%;
+  width: 1.5vh;
+  left: 15%;
+  top: 0%;
   transition: 0.6s ease;
 }
 
@@ -250,6 +250,8 @@ body {
 #BottomPrimary {
   z-index: 2;
   position: absolute;
+  display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100%;
   left: 0px;
@@ -337,7 +339,7 @@ a {
     /* Seta Baixo */
 
     position: relative;
-    width: 3.5%;
+    width: 1.5vh;
     left: 5%;
     top: 0%;
     transition: 0.6s ease;
