--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -1,11 +1,6 @@
 html body {
   width: 100%;
   height: 100%;
-  overflow-y: visible;
-}
-
-.bggov {
-  overflow: visible;
 }
 .bgg {
   overflow-x: hidden;
@@ -116,7 +111,7 @@ html body {
   position: relative;
   height: 5vh;
   width: 100%;
-  margin-top: -7vh;
+  margin-top: -1vh;
   font-family: fonteTitulo;
   font-weight: bold;
   font-size: 2vh;
@@ -124,6 +119,10 @@ html body {
   text-align: center;
   letter-spacing: 0.01em;
   color: #3e3c39;
+}
+
+.box3{
+  margin-bottom: 1%;
 }
 
 @media (min-width: 961px) {
@@ -139,7 +138,7 @@ html body {
   }
 
   .partecima {
-    margin-top: 15vh;
+    margin-top: 7%;
   }
 
   .caixa {
@@ -175,8 +174,6 @@ html body {
   }
   .box3 {
     left: 52.5%;
-    margin-top: 4%;
-    margin-bottom: 1%;
+    top: -65%;
   }
 }
-
