--- a/client/src/style/css/DividasTotais.css
+++ b/client/src/style/css/DividasTotais.css
@@ -111,7 +111,7 @@ html body {
   position: relative;
   height: 5vh;
   width: 100%;
-  margin-top: -1vh;
+  margin-top: -4vh;
   font-family: fonteTitulo;
   font-weight: bold;
   font-size: 2vh;
@@ -138,13 +138,13 @@ html body {
   }
 
   .partecima {
-    margin-top: 7%;
+    margin-top: 6%;
   }
 
   .caixa {
     width: 20%;
 
-    height: 15vw;
+    height: 26vh;
     left: 0%;
 
     margin-top: 6%;
@@ -174,6 +174,6 @@ html body {
   }
   .box3 {
     left: 52.5%;
-    top: -65%;
+    margin-top: 3%;
   }
 }
