--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -225,7 +225,9 @@ body {
   position: relative;
   width: 60%;
   height: 50%;
-  top: 24%;
+  top: 0;
+  padding-top: 6%;
+  margin-top: 0%;
   left: 30%;
 
   font-family: fonteLabel;
